= CHANGES

== 0.10.1 (Not Yet Released)

== 0.10.0

* Fix `padrino s` shortcut to accept options
* Fix Padrino::Application#run! (now correctly accepts options)
* Fix Padrino::Server (now has correct defaults options)
* Fix Padrino::Reloader with strange constants or paths #565
* Fix Padrino::Reloader reloading also $LOADED_FEATURES deps
* Fix Double loading of boot.rb in rake tasks. #560
* Fix an issue with haml rendering on rubinius
* Fix our tests to meets ruby < 1.9 needs
* Fix issue #556 now we resolve correctly prerequisites of your app
* Enhancement for #556 now is possible to add custom prerequisites to our app
* Change move Padrino.current_controller in public apis
* Enhancement, now Padrino::Reloader works without ActiveSupport::Dependency or with it disabled #567 [Thanks Bernerdschaefer]
* Cleanup padrino-core dependencies now we have less less ActiveSupport dependencies, we are very very thin finally!
* Fix bundler gem dependency mismatch #553
* Fix command issue with padrino g or padrino gen on rubinius #531
* Fix issue #562, now is no more necessary "bundle exec anything"
* Remove Padrino::Rendering from autoloading (manually must be loaded)
* New Enhancement to controller filters
* Add option to specify model generation of Account from padrino-admin
* Generates models by default into `/models`
* Controllers accept :conditions option [Thanks to Bernerdschaefer]
* Added Hungarian translation [Thanks to Kormány Zsolt]
* Added Riak support through Ripple
* Updated couchrest_model dependency to ~>1.1.0
* Fix issue #571, don't handle Gemfile if we are outside a Padrino project
* Fix issue #569, prevent a little problem with DM and string length
* Require only individual gems of DataMapper to use a thin environment and prevent to load old gems like json 1.4
* Support for priority route ordering in controllers

== 0.9.29

* Cleanup SupportLite
* Cleanup Reloader
* Cleanup Padrino::Application
* Cleanup Gemfile generation
* Cleanup Reloader