@@ -1,8 +1,12 @@
 # rake bump[X.X.X] && rake publish
+require 'rubygems' unless defined?(Gem)
 require 'rake/clean'
 require 'rake/contrib/sshpublisher'
 require 'fileutils'
+require 'rake/dsl_definition'
 require 'rdoc/task'
+
+include Rake::DSL
 
 require File.expand_path("../padrino-core/lib/padrino-core/version.rb", __FILE__)
 begin
