@@ -54,7 +54,7 @@ end
 require 'rake/testtask'
 Rake::TestTask.new(:test) do |test|
   test.libs << 'test'
-  test.pattern = 'test/**/test_*.rb'
+  test.test_files = Dir['test/**/test_*.rb']
   test.verbose = true
 end
 
