@@ -1,4 +1,4 @@
-!doctype html
+doctype html
 html lang="en" xmlns="http://www.w3.org/1999/xhtml"
   head
     meta content="text/html; charset=utf-8" http-equiv="Content-Type"
