@@ -1,3 +1,3 @@
 def setup_renderer
-  require_dependencies 'slim', :version => "~> 0.9.2"
+  require_dependencies 'slim'
 end
