@@ -2,6 +2,9 @@
 
 == 0.10.1 (Not Yet Released)
 
+* Fix env['padrino.instance'] where create a loop and is too long to show in Padrino::ShowExceptions.
+
+
 == 0.10.0
 
 * Fix `padrino s` shortcut to accept options
